# ZkOrigin

./: .gitignore  .vercelignore  Cargo.toml  Makefile  README.md  index.html  package-lock.json  package.json
circuits/kyc_attestation/: Nargo.toml  Prover.toml
circuits/kyc_attestation/src/: main.nr
circuits/provenance/: Nargo.toml  Prover.toml
circuits/provenance/src/: main.nr
circuits/wallet_age/: Nargo.toml  Prover.toml
circuits/wallet_age/src/: main.nr
client/: Cargo.toml
client/src/: main.rs
contracts/zk-origin/: Cargo.toml
contracts/zk-origin/src/: lib.rs
public/: contract-id.txt  proof.json  proof_1.json  proof_2.json
scripts/: deploy.sh  invoke.sh  setup.sh
src/: App.jsx  index.css
src/components/: FlavorSlider.jsx  FlavorTitle.jsx  LandingLayout.jsx  NavBar.jsx  VideoPinSection.jsx
src/constants/: index.js
src/hooks/: useContract.js  useWallet.js
src/pages/: Dashboard.jsx  Docs.jsx  Landing.jsx
src/sections/: BenefitSection.jsx  FooterSection.jsx  HeroSection.jsx  MessageSection.jsx  NutritionSection.jsx  TestimonialSection.jsx
