[package]
name = "zkorigin-client"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.5"
ark-groth16 = "0.5"
ark-relations = "0.5"
ark-r1cs-std = "0.5"
ark-crypto-primitives = { version = "0.5", features = ["r1cs"] }
ark-serialize = "0.5"
ark-std = "0.5"
ark-ff = "0.5"
rand = "0.8"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
